jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  labels:
    app: jenkins
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 31080
      protocol: TCP
    - name: agent
      port: 50000
      targetPort: 50000
      nodePort: 31050
      protocol: TCP
